--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="card-white">
         <h1>Hello, I'm Juyeon</h1>
-        <img src="/images/profile.jpeg" alt="Juyeon Kim" class="img-circle" width="100px">
+        <img src="/images/profile.jpg" alt="Juyeon Kim" class="img-circle" width="100px">
         <p>I'm studying coding now. <br> ⬇️This is where I learn coding.⬇️</p>
         <a href="https://www.lewagon.com/seoul" class="btn-red">Le Wagon Seoul</a>
       </div>
